--- a/gb/25/11/10/n14633344.md
+++ b/gb/25/11/10/n14633344.md
@@ -2,38 +2,38 @@
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【健康新视界】如何减少决策疲劳？</h2>
-<a href="https://d19vw3711v9lks.cloudfront.net/K6l6nLNgzHNu"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://dep6yudto3kbo.cloudfront.net/J2i6nLNgzHNr"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6></h6>
-<hr>你是否有这样的情况：什么都不想决定，连选择午餐都觉得烦躁？明知道自己该做点什么，却提不起精神。感觉反应迟钝、注意力涣散，脑子好像转不动了. 其实呢，这并不是懒，而是大脑已经被无数细碎的选择耗尽了精力。这，就是“决策疲劳”。</p><h2><span style="color:#3e7100">什么是决策疲劳？</span></h2><p>什么是决策疲劳呢？它是指人在长时间做出选择后，决策能力下降的情况。决策疲劳会让我们变得冲动、拖延，甚至做出不理性的选择。比如，有的时候，在忙碌了一天后，我们会在深夜打开购物网站，一口气买下一堆白天根本不会购买的东西。第二天醒来，看到订单往往会傻眼，然后责怪自己“自控力太差”。</p><p>但这真的是自控力的问题吗？其实不是！这是大脑能量耗尽的自然反应。决策疲劳，就会让我们有这种反应。</p><p>心理学家早就已注意到这种现象。2011年有一项着名研究，分析了8位以色列假释委员会法官超过千次的判决结果。研究发现：</p><div class=" lg:hidden"><div class="m-auto flex items-center justify-center overflow-hidden print:hidden" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_M_article_336x280_2"><div id="DJY_M_article_336x280_2"></div></div></div><p>一天开始时呢，或刚休息、吃完午餐后，法官批准假释的比例可以达到65%；但连续审案后，批准率却降到不到5%。一旦再次休息，又会回升。</p><div class="hidden lg:block"><div class="m-auto items-center justify-center overflow-hidden print:hidden hidden md:flex" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_D_article_300x250_1"><div id="DJY_D_article_300x250_1"></div></div></div><p>这说明呢，即使是专业的法官，当我们的大脑被重复的判断以及选择消耗后, 他们也会倾向于最省力的选项——就是拒绝假释。</p><p>同样地呢，我们在疲劳时，也更容易选择“最简单、最舒服”的事情，对于我们日常生活来说，就是刷手机、吃甜食、冲动消费、逃避现实等等。</p><h2><span style="color:#3e7100">大脑为什么会“累”？</span></h2><p>那么，我们为什么会有决策疲劳这个情况呢？这还得从我们的大脑说起。我们可以把大脑想像成一颗电池。早晨刚起床时电量最充足，但随着一天中不断做出各种决定——像是起床还是再躺五分钟啊？穿哪件衣服？吃什么早餐等等？——电量就一点点被消耗。</p><p>小的决策耗能比较少，而我们生活的那些重大决策呢，耗能则会非常多；因此当我们面临持续思考或者面临复杂任务时，大脑就会迅速“放电”。我自己也有这种感受啊，有的时候一天什么都不做，光是思考一些事情就已经非常疲劳了。</p><p>现代医学上也早已经认识到这一点。生理学上认为呢，我们人的大脑里面有两个结构，对于决定我们的行为很重要。一个呢是Prefrontal Cortex, 前额叶皮质，在我们大脑的前侧。它主要负责我们的理智思考还有专注力、延迟满足等等。通常能够帮助我们做出理智的判断。比如说我们想买一件衣服，在前额叶皮质活跃的时候呢，我们会考虑这件衣服是否真的适合自己，以及自己是否真的需要这一件衣服。可是呢，前额叶皮质的工作非常耗能，它需要我们身体供给大量的葡萄糖能源来进行思考。因此当我们一天持续不断的做出决策之后，它就会变得越发疲劳。这个时候呢，比起理性判断，我们会更加的依赖直觉以及惯性反应。在这时呢，杏仁核就占据了主导权。杏仁核就在我们大脑里面，一个小点， 它负责掌管情绪反应以和奖励冲动。它是一个享乐主义者，它追求当下的舒服。所以我们在大脑疲劳的时候，会更容易吃下一些垃圾食品啊或者是随随便便就买下很多衣服等等。</p><h2><span style="color:#3e7100">现代生活如何加重决策疲劳</span></h2><p>不仅如此，现代这个网络化的社会，其实也为我们拓宽了选择。我们能够轻松获更多的信息，见识到更加丰富多采的世界，但是这也加重了我们的决策负担。</p><p>你们知道我们每天面临多少选择吗？</p><div class=" lg:hidden"><div class="m-auto flex items-center justify-center overflow-hidden print:hidden" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_M_article_336x280_3"><div id="DJY_M_article_336x280_3"></div></div></div><p>那有许多媒体表示呢，们每人每天会面临大约35,000个决策。但其实并没有研究给出具体的答案。不过我们的确每天都面临非常多的决策。</p><p>康奈尔大学有一项发表于2007年的研究，通过观察了139位成年人，他们发现，一个成年人每天单单与“食品选择”相关的决策, 平均就有221个。不可思议对不对？很多细小的选择呢，我们根本就意识不到。比如吃饭，相关的选择就有：吃什么，什么时间吃，去哪里吃，和谁吃，吃多少等等。累加在一起呢，就是我们自己都会惊讶的数字。以此类推，每个人每天做的决策总数，会是“食品选择”的数十倍不止。更而且呢这还是接近20年前的实验！这中间的二十年恰恰好是我们资讯爆炸、物质变得极度丰富的二十年。因此，我们的选择只会变得更多。也就是说呢, 35,000这个数字，也许并不夸张。</p><div class="hidden lg:block"><div class="m-auto items-center justify-center overflow-hidden print:hidden hidden md:flex" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_D_article_300x250_3"><div id="DJY_D_article_300x250_3"></div></div></div><p>那么这么多的决策，会大大加重我们的疲劳程度。也会造成我们的自控力、判断力下降，在情绪上也更加容易产生波动，易怒等等，更严重的是啊，长期的决策压力可能会导致长期慢性压力的反映。长期压力其实真的很可怕，它会导致一些比较严重的心理以及生理疾病，像是抑郁呀、癌症呀等等。那我们该如何减少决策疲劳呢？</p><h2><span style="color:#3e7100">如何减少决策疲劳？</span></h2><p><strong><span style="color:#000000">1. 减少低价值决策</span></strong></p><p>第一个呢， 就是减少低价值的决策。什么是低价值的决策呢? 就是指那些对人生影响不大的选择，比如每天穿什么、早餐吃什么呀等等。</p><p>我们发现很多成功人士都采用“固定穿着”这一方法来节省脑力。像Facebook创办人扎克伯格经常穿着长得一样的灰色T恤，而蘋果创办人乔布斯， 每个发布会上， 几乎都穿同样的黑色高领毛衣和牛仔裤。</p><div class=" lg:hidden"><div class="m-auto flex items-center justify-center overflow-hidden print:hidden" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_M_article_336x280_4"><div id="DJY_M_article_336x280_4"></div></div></div><p>也有很多研究发现呢，简化选择能有效的帮助我们提升专注力与决策品质。因此呢，如果我们能够提前规划好并且固定每日流程或饮食，能够显着降低决策疲劳的情况。像是“断舍离”以及“极简主义”就是其中的典型代表。</p><p>这两个理念都是流行了很久的理念， 也是很多人践行的生活方式! 断舍离提倡舍弃不需要的物品，以获得空间与心灵的自由； 极简主义则主张“少即是多”，通过少物来追求简单生活的美感。 这两种方式都能帮助我们减少外在刺激与过多选择，进而降低决策疲劳。</p><p>我自己也有深刻体会啊。当我东西越买的越多，反而越觉得压力大。即使把东西收进柜子，心理上仍然被它们“占据”。而当我我开始关注决策疲劳这个概念后，我就开始注意每天扔掉一样用不到的东西， 或者是存起来的垃圾， 像是用完的面霜瓶子等等。几天后我发现，心情轻松了许多。尤其是当我真正用完一样东西、再丢掉时，那种满足感啊比买新东西还强烈的多。因为我知道，我正在重新掌控自己的生活。</p><div class="hidden lg:block"><div class="m-auto items-center justify-center overflow-hidden print:hidden hidden md:flex" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_D_article_300x250_4"><div id="DJY_D_article_300x250_4"></div></div></div><p>其实，这也与心理学研究一致。也有实验发现，当我们心里有太多“未完成的任务”，就会占用大量决策力，让我们更容易分心、反应变慢。会显着加重决策疲劳的程度。 那些闲置物品呢就像“未完成事件”一样，会不断提醒我们“还没用完”。清理它们，不仅仅是整理空间，更是在释放我们的心理资源。</p><div class=" lg:hidden"><div class="m-auto flex items-center justify-center overflow-hidden print:hidden" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_M_article_336x280_5"><div id="DJY_M_article_336x280_5"></div></div></div><p><span style="color:#000000"><strong>2. 注重休息与充电</strong></span></p><p>第二点呢， 就是注重休息。 一天中呢， 哪怕是午睡或者短暂放松， 都能给大脑充充电， 让它重新恢复一些精力。 我们可以在忙碌工作2至3小时后， 去休息一下。 吃吃午餐啊等等， 来保证自己之后的决策力。</p><p><span style="color:#000000"><strong>3. 优化决策时机</strong></span></p><p>那最后一点呢， 就是， 优化决策时机。把重要的事情放在大脑能量充足的时候，也就是刚刚休息后，尤其是刚刚起床。因为既然我们的精力下降是不可避免的一件事情，那么怎么运用好我们的决策力这个有限的资源， 也是很重要的。 而且呢， 未解决的事情其实反倒呢， 会侵占我们的决策空间， 进而导致决策疲劳。 尤其是那些重要的事情， 我们是不太可能忽略它们的。 所以呢， 把重要的事情放在精力充沛的时候， 尽早解决， 是一个很有效的减少决策疲劳的方式。</p><div class="hidden lg:block"><div class="m-auto items-center justify-center overflow-hidden print:hidden hidden md:flex" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_D_article_300x250_5"><div id="DJY_D_article_300x250_5"></div></div></div><div class="shortcode mx-auto"><!--$--><div class="mb-4"><div class="lazyload-wrapper "><div class="lazyload-placeholder"></div></div></div><!--/$--></div><p>——《健康新视界》制作组
+<hr>你是否有这样的情况：什么都不想决定，连选择午餐都觉得烦躁？明知道自己该做点什么，却提不起精神。感觉反应迟钝、注意力涣散，脑子好像转不动了. 其实呢，这并不是懒，而是大脑已经被无数细碎的选择耗尽了精力。这，就是“决策疲劳”。</p><h2><span style="color:#3e7100">什么是决策疲劳？</span></h2><p>什么是决策疲劳呢？它是指人在长时间做出选择后，决策能力下降的情况。决策疲劳会让我们变得冲动、拖延，甚至做出不理性的选择。比如，有的时候，在忙碌了一天后，我们会在深夜打开购物网站，一口气买下一堆白天根本不会购买的东西。第二天醒来，看到订单往往会傻眼，然后责怪自己“自控力太差”。</p><p>但这真的是自控力的问题吗？其实不是！这是大脑能量耗尽的自然反应。决策疲劳，就会让我们有这种反应。</p><p>心理学家早就已注意到这种现象。2011年有一项著名研究，分析了8位以色列假释委员会法官超过千次的判决结果。研究发现：</p><div class=" lg:hidden"><div class="m-auto flex items-center justify-center overflow-hidden print:hidden" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_M_article_336x280_2"><div id="DJY_M_article_336x280_2"></div></div></div><p>一天开始时呢，或刚休息、吃完午餐后，法官批准假释的比例可以达到65%；但连续审案后，批准率却降到不到5%。一旦再次休息，又会回升。</p><div class="hidden lg:block"><div class="m-auto items-center justify-center overflow-hidden print:hidden hidden md:flex" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_D_article_300x250_1"><div id="DJY_D_article_300x250_1"></div></div></div><p>这说明呢，即使是专业的法官，当我们的大脑被重复的判断以及选择消耗后, 他们也会倾向于最省力的选项——就是拒绝假释。</p><p>同样地呢，我们在疲劳时，也更容易选择“最简单、最舒服”的事情，对于我们日常生活来说，就是刷手机、吃甜食、冲动消费、逃避现实等等。</p><h2><span style="color:#3e7100">大脑为什么会“累”？</span></h2><p>那么，我们为什么会有决策疲劳这个情况呢？这还得从我们的大脑说起。我们可以把大脑想像成一颗电池。早晨刚起床时电量最充足，但随着一天中不断做出各种决定——像是起床还是再躺五分钟啊？穿哪件衣服？吃什么早餐等等？——电量就一点点被消耗。</p><p>小的决策耗能比较少，而我们生活的那些重大决策呢，耗能则会非常多；因此当我们面临持续思考或者面临复杂任务时，大脑就会迅速“放电”。我自己也有这种感受啊，有的时候一天什么都不做，光是思考一些事情就已经非常疲劳了。</p><p>现代医学上也早已经认识到这一点。生理学上认为呢，我们人的大脑里面有两个结构，对于决定我们的行为很重要。一个呢是Prefrontal Cortex, 前额叶皮质，在我们大脑的前侧。它主要负责我们的理智思考还有专注力、延迟满足等等。通常能够帮助我们做出理智的判断。比如说我们想买一件衣服，在前额叶皮质活跃的时候呢，我们会考虑这件衣服是否真的适合自己，以及自己是否真的需要这一件衣服。可是呢，前额叶皮质的工作非常耗能，它需要我们身体供给大量的葡萄糖能源来进行思考。因此当我们一天持续不断的做出决策之后，它就会变得越发疲劳。这个时候呢，比起理性判断，我们会更加的依赖直觉以及惯性反应。在这时呢，杏仁核就占据了主导权。杏仁核就在我们大脑里面，一个小点， 它负责掌管情绪反应以和奖励冲动。它是一个享乐主义者，它追求当下的舒服。所以我们在大脑疲劳的时候，会更容易吃下一些垃圾食品啊或者是随随便便就买下很多衣服等等。</p><h2><span style="color:#3e7100">现代生活如何加重决策疲劳</span></h2><p>不仅如此，现代这个网络化的社会，其实也为我们拓宽了选择。我们能够轻松获更多的信息，见识到更加丰富多采的世界，但是这也加重了我们的决策负担。</p><p>你们知道我们每天面临多少选择吗？</p><div class=" lg:hidden"><div class="m-auto flex items-center justify-center overflow-hidden print:hidden" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_M_article_336x280_3"><div id="DJY_M_article_336x280_3"></div></div></div><p>那有许多媒体表示呢，们每人每天会面临大约35,000个决策。但其实并没有研究给出具体的答案。不过我们的确每天都面临非常多的决策。</p><p>康奈尔大学有一项发表于2007年的研究，通过观察了139位成年人，他们发现，一个成年人每天单单与“食品选择”相关的决策, 平均就有221个。不可思议对不对？很多细小的选择呢，我们根本就意识不到。比如吃饭，相关的选择就有：吃什么，什么时间吃，去哪里吃，和谁吃，吃多少等等。累加在一起呢，就是我们自己都会惊讶的数字。以此类推，每个人每天做的决策总数，会是“食品选择”的数十倍不止。更而且呢这还是接近20年前的实验！这中间的二十年恰恰好是我们资讯爆炸、物质变得极度丰富的二十年。因此，我们的选择只会变得更多。也就是说呢, 35,000这个数字，也许并不夸张。</p><div class="hidden lg:block"><div class="m-auto items-center justify-center overflow-hidden print:hidden hidden md:flex" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_D_article_300x250_3"><div id="DJY_D_article_300x250_3"></div></div></div><p>那么这么多的决策，会大大加重我们的疲劳程度。也会造成我们的自控力、判断力下降，在情绪上也更加容易产生波动，易怒等等，更严重的是啊，长期的决策压力可能会导致长期慢性压力的反映。长期压力其实真的很可怕，它会导致一些比较严重的心理以及生理疾病，像是抑郁呀、癌症呀等等。那我们该如何减少决策疲劳呢？</p><h2><span style="color:#3e7100">如何减少决策疲劳？</span></h2><p><strong><span style="color:#000000">1. 减少低价值决策</span></strong></p><p>第一个呢， 就是减少低价值的决策。什么是低价值的决策呢? 就是指那些对人生影响不大的选择，比如每天穿什么、早餐吃什么呀等等。</p><p>我们发现很多成功人士都采用“固定穿着”这一方法来节省脑力。像Facebook创办人扎克伯格经常穿着长得一样的灰色T恤，而苹果创办人乔布斯， 每个发布会上， 几乎都穿同样的黑色高领毛衣和牛仔裤。</p><div class=" lg:hidden"><div class="m-auto flex items-center justify-center overflow-hidden print:hidden" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_M_article_336x280_4"><div id="DJY_M_article_336x280_4"></div></div></div><p>也有很多研究发现呢，简化选择能有效的帮助我们提升专注力与决策品质。因此呢，如果我们能够提前规划好并且固定每日流程或饮食，能够显著降低决策疲劳的情况。像是“断舍离”以及“极简主义”就是其中的典型代表。</p><p>这两个理念都是流行了很久的理念， 也是很多人践行的生活方式! 断舍离提倡舍弃不需要的物品，以获得空间与心灵的自由； 极简主义则主张“少即是多”，通过少物来追求简单生活的美感。 这两种方式都能帮助我们减少外在刺激与过多选择，进而降低决策疲劳。</p><p>我自己也有深刻体会啊。当我东西越买的越多，反而越觉得压力大。即使把东西收进柜子，心理上仍然被它们“占据”。而当我我开始关注决策疲劳这个概念后，我就开始注意每天扔掉一样用不到的东西， 或者是存起来的垃圾， 像是用完的面霜瓶子等等。几天后我发现，心情轻松了许多。尤其是当我真正用完一样东西、再丢掉时，那种满足感啊比买新东西还强烈的多。因为我知道，我正在重新掌控自己的生活。</p><div class="hidden lg:block"><div class="m-auto items-center justify-center overflow-hidden print:hidden hidden md:flex" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_D_article_300x250_4"><div id="DJY_D_article_300x250_4"></div></div></div><p>其实，这也与心理学研究一致。也有实验发现，当我们心里有太多“未完成的任务”，就会占用大量决策力，让我们更容易分心、反应变慢。会显著加重决策疲劳的程度。 那些闲置物品呢就像“未完成事件”一样，会不断提醒我们“还没用完”。清理它们，不仅仅是整理空间，更是在释放我们的心理资源。</p><div class=" lg:hidden"><div class="m-auto flex items-center justify-center overflow-hidden print:hidden" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_M_article_336x280_5"><div id="DJY_M_article_336x280_5"></div></div></div><p><span style="color:#000000"><strong>2. 注重休息与充电</strong></span></p><p>第二点呢， 就是注重休息。 一天中呢， 哪怕是午睡或者短暂放松， 都能给大脑充充电， 让它重新恢复一些精力。 我们可以在忙碌工作2至3小时后， 去休息一下。 吃吃午餐啊等等， 来保证自己之后的决策力。</p><p><span style="color:#000000"><strong>3. 优化决策时机</strong></span></p><p>那最后一点呢， 就是， 优化决策时机。把重要的事情放在大脑能量充足的时候，也就是刚刚休息后，尤其是刚刚起床。因为既然我们的精力下降是不可避免的一件事情，那么怎么运用好我们的决策力这个有限的资源， 也是很重要的。 而且呢， 未解决的事情其实反倒呢， 会侵占我们的决策空间， 进而导致决策疲劳。 尤其是那些重要的事情， 我们是不太可能忽略它们的。 所以呢， 把重要的事情放在精力充沛的时候， 尽早解决， 是一个很有效的减少决策疲劳的方式。</p><div class="hidden lg:block"><div class="m-auto items-center justify-center overflow-hidden print:hidden hidden md:flex" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_D_article_300x250_5"><div id="DJY_D_article_300x250_5"></div></div></div><div class="shortcode mx-auto"><!--$--><div class="mb-4"><div class="lazyload-wrapper "><div class="lazyload-placeholder"></div></div></div><!--/$--></div><p>——《健康新视界》制作组
 <hr>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645158.md#1">六四抗命军长受审视频曝光 分析：中共末日已近</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641240.md#1">中共APT31利用云服务对俄IT产业发动网攻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/2/n9799674.md#1" target="_blank">刘晓：被中共打造的“革命母亲”杨沫</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/11/n11583320.md#1" target="_blank">“法轮大法像尘世中的钻石 无比珍贵”</a></li><hr>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/5/n9926680.md#1" target="_blank">文武：鲁迅在中共破坏中国传统文化中的作用</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/24/n10998917.md#1" target="_blank">影片：与全世界背道而行 中共为何打击善良</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/1/n14472598.md#1">【品读唐诗】登高秋望 吟成古今第一七言律</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/26/n14492521.md#1">【品读唐诗】孟浩然的岘山第一诗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/27/n14644037.md#1">难以归位的怅然若失——解读苏轼《后赤壁赋》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/14/n14635938.md#1">尚书公想招穷书生为婿 夫人选了贵公子 结局出人意料（上）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/9/n14632431.md#1">苏东坡生活禅：东坡肉好吃的珍味秘诀</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647517.md#1">【佳音时刻】上百人丧生 香港大火更多内幕曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647538.md#1">【新闻大破解】香港恶火 红祸下系统性崩坏？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647527.md#1">【直播】川普主持第九次内阁会议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/24/n14641853.md#1">10款最好的二手SUV 本田CR-V居首</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645932.md#1">官场动荡 马兴瑞缺席中共政治局学习会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14646107.md#1">一杯咖啡卖12899元 上海天价咖啡引热议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645754.md#1">香港大火夺逾百命 甄妮黄秋生等艺人呛官方</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646909.md#1">滨崎步等日星演出受阻 中共外交部发言人甩锅</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645801.md#1">滨崎步上海演唱会被取消 独自登台完成演出</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645821.md#1">周润发满头白发登MAMA 率全场哀悼火灾罹难者</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645828.md#1">坤达涉闪兵 《玩很大》最后录影曝</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645735.md#1">为何很多人要改用“傻瓜手机”？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647181.md#1">为何冬天时你应该在窗户边放一碗盐？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645970.md#1">鱼刺卡喉咙的风险比你想像的高 如何处理？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646574.md#1">为何无条件的感恩会让你幸福？如何培养？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647107.md#1">私人飞机飞行员的薪资有多少？有何优缺点？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647110.md#1">奇异救赎——这世上另一个我</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651624.md#1">【佳音时刻】中共官场太荒诞 问责不误升官</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651951.md#1">【军事情报局】东南亚爆发战争 泰国攻入柬埔寨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651982.md#1">【重播】泰国联合工作组开记者会 泰柬边境局势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650041.md#1">分析：北京“稀土武器”效力正快速下降</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650517.md#1">相声演员郭德纲表演《艺高人胆小》遭约谈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650551.md#1">日军机遭中共歼-15雷达照射 高市早苗回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/11/10/n14633344.htm">【健康新视界】如何减少决策疲劳？</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/11/10/n14633344.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
