--- a/gb/25/11/19/n14639029.md
+++ b/gb/25/11/19/n14639029.md
@@ -12,15 +12,15 @@
 ．保持规律作息、充足睡眠，避免熬夜。
 ．多喝温水，帮助代谢与排毒。
 ．维持愉快心情，避免压力过大。
-．适当运动，促进气血运行。</p><p><strong>小叮咛：</strong>容易感冒、常感到疲倦、肠胃虚弱等族群，建议谘询中医师，根据个人体质进行调理，让您在秋冬依然能保持健康与活力。◎◇</p><p><em>（本文摘编自《<ahref="https://ma-kuang.1655.com.tw/health_list.php?cat=80&amp;id=3479" target="_blank" rel="noopener" target="_blank" class="health-article-hover-class">天气转凉不想感冒？中医教你补气防感</a>冒》，马光医疗网提供）</em></p><p>责任编辑：王晓明#
+．适当运动，促进气血运行。</p><p><strong>小叮咛：</strong>容易感冒、常感到疲倦、肠胃虚弱等族群，建议咨询中医师，根据个人体质进行调理，让您在秋冬依然能保持健康与活力。◎◇</p><p><em>（本文摘编自《<ahref="https://ma-kuang.1655.com.tw/health_list.php?cat=80&amp;id=3479" target="_blank" rel="noopener" target="_blank" class="health-article-hover-class">天气转凉不想感冒？中医教你补气防感</a>冒》，马光医疗网提供）</em></p><p>责任编辑：王晓明#
 <hr>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645158.md#1">六四抗命军长受审视频曝光 分析：中共末日已近</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641240.md#1">中共APT31利用云服务对俄IT产业发动网攻</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/7/23/n2974481.md#1" target="_blank">鲜为人知的马克思之四：好斗的马克思</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/8/n11172214.md#1" target="_blank">只做了这一件事 他们绝处逢生（一）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/10/n10045340.md#1" target="_blank">《苦菜花》人物原型的真实人生（2）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/21/n11398539.md#1" target="_blank">国际宗教自由委员会副主席：20年的迫害太久</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
