--- a/gb/25/10/2/n14607230.md
+++ b/gb/25/10/2/n14607230.md
@@ -82,12 +82,12 @@
 <p>五星旗倒挂的视频在社交媒体上传播后引发热议，不少网民将其视为中共垮台的先兆。</p>
 <p>责任编辑：林琮文#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645563.md#1">印尼苏门答腊岛洪灾救援困难 已致248人死</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645549.md#1">川普政府与西北大学达和解 恢复联邦补助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/12/n11446723.md#1" target="_blank">曹长青：美国成为唯一超强的秘密</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/15/n10487846.md#1" target="_blank">功夫·寻道——武术大师李有甫的故事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/19/n10071544.md#1" target="_blank">唐恩：从天安门自焚骗局看善恶有报</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/4/n11089256.md#1" target="_blank">一位军人法轮功学员 家庭工作中的风范</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
